@@ -140,12 +140,12 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Finnish (fi)
 * Võro (fiu-vro)
 * French (fr)
-* Georgian (ka)
 * Hakka (hak)
 * Hebrew (he)
 * Indonesian (id)
 * Italian (it)
 * Japanese (ja)
+* Georgian (ka)
 * Kabyle (kab)
 * Kazakh (kk)
 * Kurdish (ku)
@@ -158,6 +158,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Somali (so)
 * Sundanese (su)
 * Swedish (sv)
+* Old Chinese / Late Middle Chinese (zh-classical)
 * Chinese (PRC) (zh-cn)
 * Chinese (Taiwan) (zh-tw)
 * Cantonese (zh-yue)
